fix: scrollbar styles for edge and firefox

--- a/src/styles/components/scrollbars.scss
+++ b/src/styles/components/scrollbars.scss
@@ -1,4 +1,7 @@
 @mixin _scrollBarStyles() {
+  scrollbar-color: #888 #f1f1f1;
+  scrollbar-width: 4px;
+
   ::-webkit-scrollbar {
     width: 4px;
     height: 4px;
@@ -22,6 +25,9 @@
   }
 
   &.isDarkTheme {
+    scrollbar-color: #333 #222;
+
+
     ::-webkit-scrollbar-track {
       background: #222;
       border-radius: 4px;
